--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+  "homepage": "https://tornaltisolar.com",
   "eslintConfig": {
     "extends": "react-app"
   },
