--- a/.github/workflows/todoissue.yml
+++ b/.github/workflows/todoissue.yml
@@ -20,6 +20,6 @@ jobs:
           BEFORE: ${{ github.event.before }}
           SHA: ${{ github.sha }}
           TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          LABEL: "/** TODO"
-          COMMENT_MARKER: "* "
+          LABEL: "// TODO"
+          COMMENT_MARKER: "//"
         id: "todo"
