--- a/package.json
+++ b/package.json
@@ -3,19 +3,28 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "evergreen-ui": "^4.25.0",
+    "@ant-design/icons": "^4.1.0",
+    "antd": "^4.2.0",
+    "antd-dayjs-webpack-plugin": "^1.0.0",
+    "axios": "^0.19.2",
+    "babel-plugin-import": "^1.13.0",
+    "customize-cra": "^1.0.0-alpha.0",
+    "enquire.js": "^2.1.6",
+    "less": "^3.11.1",
+    "rc-queue-anim": "^1.8.4",
+    "rc-scroll-anim": "^2.7.4",
     "react": "^16.11.0",
+    "react-app-rewired": "^2.1.6",
     "react-dom": "^16.11.0",
+    "react-google-recaptcha": "^2.0.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
-    "styled-components": "^4.4.1",
-    "styled-system": "^5.1.2"
+    "react-tilt": "^0.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test"
   },
   "homepage": "https://tornaltisolar.com",
   "eslintConfig": {
@@ -32,5 +41,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "less-loader": "^6.0.0",
+    "sass-loader": "^8.0.2"
   }
 }
