--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "rc-scroll-anim": "^2.7.4",
     "react": "^16.11.0",
     "react-app-rewired": "^2.1.6",
+    "react-device-detect": "^1.12.1",
     "react-dom": "^16.11.0",
     "react-google-recaptcha": "^2.0.1",
     "react-router-dom": "^5.1.2",
